--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,8 @@
 <footer class="footer footer-inverse">
+    <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+         viewBox="0 0 100 102" preserveAspectRatio="none">
+        <path d="M0 0 L50 100 L100 0 Z"></path>
+    </svg>
     <section class="footer-information">
         <div class="container">
             <div class="row">
@@ -22,7 +26,7 @@
 
                     <p>
                         {% for link in site.navigation %}
-                            <a href="{{ link.url }}">{{ link.text }}</a>
+                        <a href="{{ link.url }}">{{ link.text }}</a>
                         {% endfor %}
                     </p>
                 </div>
