--- a/_sass/prbaron/_posts.scss
+++ b/_sass/prbaron/_posts.scss
@@ -12,9 +12,19 @@
         border-bottom  : none;
     }
 
+    .post-title a {
+        color : inherit;
+        @include transition(color .3s ease-in-out);
+
+        &:hover {
+            color           : $link-color;
+            text-decoration : none;
+        }
+    }
+
     .post-subtitle {
         color     : transparentize($gray-dark, 0.5);
-        font-size : 0.75em;
+        font-size : 0.85em;
     }
 
     .post-actions {
