--- a/_includes/submenu.html
+++ b/_includes/submenu.html
@@ -36,7 +36,7 @@
                     {% endfor %}
                     <li>
                         <a href="https://github.com/prbaron/pbckcode">
-                            <i class="fa fa-code-fork"></i> Fork it on GitHub !
+                            <i class="fa fa-fork"></i> Fork it on GitHub !
                         </a>
                     </li>
                 </ul>
