--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,6 @@
 @import "../_sass/prbaron/mixins";
 @import "../_sass/prbaron/variables";
 @import "../_sass/bootstrap-3.1.1/bootstrap";
-@import "../_sass/font-awesome-4.1.0/font-awesome";
+@import "../_sass/fontello/fontello";
 
 @import "../_sass/prbaron/prbaron";
