--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target=".navbar-collapse">
+                        data-target="#bs-example-navbar-collapse-1">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -15,7 +15,7 @@
                     <img src="/img/logo.png" alt="logo"/> pierrebaron
                 </a>
             </div>
-            <div class="navbar-collapse collapse navbar-right">
+            <div class="navbar-collapse collapse navbar-right" id="bs-example-navbar-collapse-1">
                 {% include menu.html %}
             </div>
             <!--/.nav-collapse -->
