--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="{{'/img/favicon.png' | prepend: site.site_url}}">
     <link rel="apple-touch-icon-precomposed" href="{{'/img/favicon.png' | prepend: site.site_url}}">
 
+    <link rel='stylesheet' type='text/css'
+          href='http://fonts.googleapis.com/css?family=Open+Sans:300|Kreon:700|Droid+Serif:700italic|Fjalla+One'>
     <link rel="stylesheet" href="{{'/css/style.css' | prepend : site.base_url}}">
 
     {% if page.layout == "examples" %}
