--- a/_sass/prbaron/_sections.scss
+++ b/_sass/prbaron/_sections.scss
@@ -9,6 +9,7 @@
     }
 
     .section-title {
+        font-family   : $headings-font-family-2;
         margin-bottom : $grid-gutter-width;
         text-align    : center;
     }
