Improved font face rendering

--- a/_sass/prbaron/_tagline.scss
+++ b/_sass/prbaron/_tagline.scss
@@ -28,3 +28,11 @@
         }
     }
 }
+
+.font-mir-medium-loaded {
+    .tagline {
+        .tagline-title {
+            font-family : "Mir-Medium", Kreon, sans-serif;
+        }
+    }
+}
